Created a 'Feed' Object with info about the current feed, compiles now!

--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<me.ccrama.redditslide.Views.SidebarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<me.ccrama.rssslide.SidebarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -31,10 +31,10 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/standard_toolbar_height"
-                android:minHeight="@dimen/standard_toolbar_height"
+                android:layout_height="56dp"
+                android:minHeight="56dp"
                 android:theme="@style/ActionBarCompat"
-                android:title="@string/app_name" >
+           >
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -104,4 +104,4 @@
         android:background="?attr/card_background"
         android:orientation="vertical" />
 
-</me.ccrama.redditslide.Views.SidebarLayout>
+</me.ccrama.rssslide.SidebarLayout>
