--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -36,7 +36,7 @@
                 android:progress="0"/>
     </android.support.design.widget.AppBarLayout>
 
-    <me.ccrama.redditslide.Views.NestedWebView
+    <me.ccrama.rssslide.NestedWebView
             android:id="@+id/web"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
