--- a/app/src/main/res/layout/activity_singlefeed.xml
+++ b/app/src/main/res/layout/activity_singlefeed.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<me.ccrama.redditslide.Views.SidebarLayout
+<me.ccrama.rssslide.SidebarLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -40,4 +40,4 @@
                 android:theme="@style/ActionBarCompat" />
         </android.support.design.widget.AppBarLayout>
     </android.support.design.widget.CoordinatorLayout>
-</me.ccrama.redditslide.Views.SidebarLayout>
+</me.ccrama.rssslide.SidebarLayout>
