--- a/app/src/main/res/layout/fab.xml
+++ b/app/src/main/res/layout/fab.xml
@@ -7,5 +7,5 @@
     app:elevation="4dp"
     app:fabSize="normal"
     app:layout_anchorGravity="bottom|right|end"
-    app:layout_behavior="me.ccrama.redditslide.Views.AutoHideFAB"
+    app:layout_behavior="me.ccrama.rssslide.AutoHideFAB"
     app:pressedTranslationZ="12dp" />
