Tons of bug fixes, Now loads new posts above current position and saves state with Realm, Turned Feeds into a Realm object, Moved settings from Slide to Slide RSS

--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -9,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    <me.ccrama.redditslide.SpoilerRobotoTextView
+    <me.ccrama.rssslide.SpoilerRobotoTextView
             android:id="@+id/body"
             android:layout_width="match_parent"
             android:paddingTop="16dp"
