--- a/app/src/main/res/layout/subforsublistdrag.xml
+++ b/app/src/main/res/layout/subforsublistdrag.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent" />
 
         <ImageView
-            android:id="@+id/color"
+            android:id="@+id/icon"
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_gravity="center_vertical"
@@ -47,14 +47,6 @@
                         android:textColor="?attr/font"
                         android:textSize="16sp"
                         android:text="Android"/>
-                <android.support.v7.widget.AppCompatCheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="48dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:padding="8dp"
-                        android:id="@+id/isSubscribed"
-                        />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
