Switched to ROME for RSS parsing, Better image detection and parsing, Added option to clear current feed from Realm cache

--- a/app/src/main/res/menu/menu_subreddit_overview.xml
+++ b/app/src/main/res/menu/menu_subreddit_overview.xml
@@ -37,6 +37,11 @@
             app:showAsAction="never"/>
 
     <item
+        android:id="@+id/clear"
+        android:title="Clear cache"
+        app:showAsAction="never"/>
+
+    <item
             android:id="@+id/hide_posts"
             android:title="@string/hide_read_posts"
             app:showAsAction="never"/>
