--- a/app/src/main/res/layout/submission_largecard.xml
+++ b/app/src/main/res/layout/submission_largecard.xml
@@ -38,6 +38,7 @@
                 android:layout_marginLeft="18dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                android:src="@drawable/chameleon"
                 app:riv_corner_radius="2dp" />
 
             <ImageView
