--- a/app/src/main/res/menu/pic_mode_settings.xml
+++ b/app/src/main/res/menu/pic_mode_settings.xml
@@ -7,4 +7,8 @@
     <item
     android:id="@+id/thumbnail"
     android:title="@string/mode_thumbnail"/>
+    <item
+        android:id="@+id/none"
+        android:title="No images"/>
+
 </menu>
