Moved article checking/Realm conversion off of the main thread, Added ability to open links in external apps

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -113,6 +113,30 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/handling"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:background="?android:selectableItemBackground"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="56dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="16dp"
+                        android:padding="16dp"
+                        android:tint="?attr/tint"
+                        app:srcCompat="@drawable/link" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="Link handling"
+                        android:textColor="?attr/font"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
                         android:id="@+id/offline"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
