--- a/app/src/main/res/layout/drawer.xml
+++ b/app/src/main/res/layout/drawer.xml
@@ -154,7 +154,11 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </RelativeLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.25dp"
+        android:alpha=".25"
+        android:background="?attr/tint"/>
     <View
         android:id="@+id/drawer_divider"
         android:layout_width="match_parent"
