--- a/app/src/main/res/layout/header_image_title_view.xml
+++ b/app/src/main/res/layout/header_image_title_view.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<merge
-    android:id="@+id/imagearea"
-    android:layout_width="match_parent"
+<merge android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
